The error was found by Luca in the rescaling factor, missing factor 2, corrected now. Code works for H

--- a/src/tut.ipynb
+++ b/src/tut.ipynb
@@ -520,20 +520,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-22.545883072048923\n"
+      "-0.5012574184550684\n"
      ]
     }
    ],
    "source": [
-    "Energy_test = -23.43603432 + 0.86305015\n",
-    "print((1/Energy_test - 1/(137.035999177**2))**(-1))"
+    "Energy_test = -0.50251687\n",
+    "# print((1/Energy_test - 1/(2*137.035999177**2))**(-1))\n",
+    "print((1/Energy_test - 1/(2*10**2))**(-1))"
    ]
   },
   {
